--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
     <!--== Clients Start ==-->
     <section class="pb-60 pt-60 ">
       <div class="container">
-        <h2 class="mt-0 text-center font-700">Creative Video Production Company</h2>
+        <h2 class="mt-0 text-center font-700">Customised video-making services <br/> for your brand</h2>
         <hr class="center_line gradient-bg-6">
         <div class="row">
 
