ui changes done

--- a/branding.html
+++ b/branding.html
@@ -75,8 +75,8 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i
                             class="tr-icon ion-android-menu"></i> </button>
                     <div class="logo"> <a href="index.html"> <img class="logo logo-display"
-                                src="/assets/images/skittles_logo.webp" alt=""> <img class="logo logo-scrolled"
-                                src="/assets/images/skittles_logo.webp" alt="">
+                                src="/assets/images/skittles_logo.png" alt=""> <img class="logo logo-scrolled"
+                                src="/assets/images/skittles_logo.png" alt="">
                         </a> </div>
                 </div>
                 <!--== End Header Navigation ==-->
@@ -91,12 +91,12 @@
                         <li class="dropdown active"><a href="#" class="dropdown-toggle"
                                 data-toggle="dropdown">Services</a>
                             <ul class="dropdown-menu">
+                                <li><a href="corporate-video-production.html">Corporate Video</a></li>
+                                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
                                 <li><a href="short-film.html">Campaign Videos</a></li>
+                                <li><a href="explainer-video.html">Animated Video</a></li>
                                 <li><a href="events-marketing-videos.html">Wedding / event film</a></li>
                                 <li><a href="branding.html">Designing & Branding Services</a></li>
-                                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
-                                <li><a href="corporate-video-production.html">Corporate Video</a></li>
-                                <li><a href="explainer-video.html">Animated Video</a></li>
                             </ul>
                         </li>
 
@@ -162,7 +162,7 @@
                 <h2 class="mt-0 text-center font-700 white-color">Why does your brand need it?</h2>
                 <hr class="center_line gradient-bg-6">
                 <div class="row">
-                    <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+                    <div class="col-md-4 col-sm-4 col-xs-12 text-center animation-move-top">
                         <div class="counter-wrap">
                             <img src="/assets/images/firstimpression.svg" alt="" />
                             <h5 class="font-700 white-color">First Impressions Matter</h5>
@@ -174,7 +174,7 @@
                                 crowded room – familiar and welcoming.</p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+                    <div class="col-md-4 col-sm-4 col-xs-12 text-center animation-move-top">
                         <div class="counter-wrap">
                             <img src="/assets/images/Buildstrust.svg" alt="" />
                             <h5 class="font-700 white-color">Builds Trust</h5>
@@ -187,7 +187,7 @@
                                 more confident in choosing your products or services.</p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+                    <div class="col-md-4 col-sm-4 col-xs-12 text-center animation-move-top">
                         <div class="counter-wrap">
                             <img src="/assets/images/setsyouapart2.svg" alt="" />
                             <h5 class="font-700 white-color">Sets You Apart</h5>
@@ -202,7 +202,7 @@
                     </div>
                 </div>
                 <div class="row flex-box-center">
-                    <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+                    <div class="col-md-4 col-sm-4 col-xs-12 text-center animation-move-top">
                         <div class="counter-wrap">
                             <img src="/assets/images/Connectsemotionally.svg" alt="" />
                             <h5 class="font-700 white-color">Connects Emotionally</h5>
@@ -215,7 +215,7 @@
                                 your audience feel.</p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+                    <div class="col-md-4 col-sm-4 col-xs-12 text-center animation-move-top">
                         <div class="counter-wrap">
                             <img src="/assets/images/boostsrecognition.svg" alt="" />
                             <h5 class="font-700 white-color">Boosts Recognition</h5>
@@ -231,46 +231,6 @@
 
             </div>
         </section>
-
-        <!-- <section class="pb-60 white-bg pt-60 ">
-            <div class="container">
-                <h2 class="mt-0 text-center font-700">Why does your brand need it?</h2>
-                <hr class="center_line gradient-bg-6">
-                <div class="row cmn_flex_box">
-
-
-                    <div class="col-lg-6 col-md-6 col-xs-12 ">
-                        <div class="pt-40">
-                            <p>1. First Impressions Matter:<br />Your brand must make a lasting first impression in a
-                                sea of options. Effective branding ensures that when someone encounters your business
-                                for the first time, they remember it. It's like having a friendly face in a crowded room
-                                – familiar and welcoming.</p>
-                            <p>2. Sets You Apart:<br />Think about your favourite brands. What makes them stand out?
-                                It's not just the product; it's the personality they've crafted through branding. Your
-                                brand identity – the colours, the logo, the tone – sets you apart and makes you
-                                memorable.</p>
-                            <p>3. Builds Trust:<br />People trust what they know. A consistent and well-crafted brand
-                                builds trust with your audience. When your branding is cohesive across all touchpoints,
-                                it signals reliability and professionalism, making customers more confident in choosing
-                                your products or services.</p>
-                            <p>4. Connects Emotionally:<br />Beyond the product or service, people connect with brands
-                                on an emotional level. Adequate branding taps into those emotions, creating a connection
-                                beyond transactional. It's not just about what you sell but how you make your audience
-                                feel.</p>
-                            <p>5. Boosts Recognition:<br />We're all bombarded with information daily. Your brand needs
-                                to be easily recognisable amidst the noise. That's where branding shines – making your
-                                business instantly identifiable, even in a cluttered market.</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 pt-70">
-                        <div class="pat-left">
-                            <img src="./assets/images/Event-2.webp" alt="" class="img-responsive">
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </section> -->
 
         <!--== Call to Actions Start ==-->
         <section class="gradient-bg-6 pt-80 pb-80">
