--- a/events-marketing-videos.html
+++ b/events-marketing-videos.html
@@ -74,8 +74,8 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i
               class="tr-icon ion-android-menu"></i> </button>
           <div class="logo"> <a href="index.html"> <img class="logo logo-display"
-                src="/assets/images/skittles_logo.webp" alt=""> <img class="logo logo-scrolled"
-                src="/assets/images/skittles_logo.webp" alt="">
+                src="/assets/images/skittles_logo.png" alt=""> <img class="logo logo-scrolled"
+                src="/assets/images/skittles_logo.png" alt="">
             </a> </div>
         </div>
         <!--== End Header Navigation ==-->
@@ -89,12 +89,12 @@
 
             <li class="dropdown active"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
               <ul class="dropdown-menu">
+                <li><a href="corporate-video-production.html">Corporate Video</a></li>
+                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
                 <li><a href="short-film.html">Campaign Videos</a></li>
+                <li><a href="explainer-video.html">Animated Video</a></li>
                 <li><a href="events-marketing-videos.html">Wedding / event film</a></li>
                 <li><a href="branding.html">Designing & Branding Services</a></li>
-                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
-                <li><a href="corporate-video-production.html">Corporate Video</a></li>
-                <li><a href="explainer-video.html">Animated Video</a></li>
               </ul>
             </li>
 
@@ -160,7 +160,7 @@
         <h2 class="mt-0 text-center font-700 white-color">Why does your event need a film:</h2>
         <hr class="center_line gradient-bg-6">
         <div class="row">
-          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center animation-move-top">
             <div class="counter-wrap">
               <img src="/assets/images/preservingmemories.svg" alt="" />
               <h5 class="font-700 white-color">Preserving Memories</h5>
@@ -172,7 +172,7 @@
                 whenever you hit play.</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center animation-move-top">
             <div class="counter-wrap">
               <img src="/assets/images/relivingemotions.svg" alt="" />
               <h5 class="font-700 white-color">Reliving Emotions</h5>
@@ -184,7 +184,7 @@
                 right back in the moment.</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center animation-move-top">
             <div class="counter-wrap">
               <img src="/assets/images/Lovedones.svg" alt="" />
               <h5 class="font-700 white-color">Sharing with Loved Ones</h5>
@@ -198,7 +198,7 @@
           </div>
         </div>
         <div class="row flex-box-center">
-          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center animation-move-top">
             <div class="counter-wrap">
               <img src="/assets/images/Cinematicexperience.svg" alt="" />
               <h5 class="font-700 white-color">Cinematic Experience </h5>
@@ -209,7 +209,7 @@
                 movie-like experience that captivates and moves everyone who watches it.</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center animation-move-top">
             <div class="counter-wrap">
               <img src="/assets/images/capturidngtheunseen.svg" alt="" />
               <h5 class="font-700 white-color">Capturing the Unseen</h5>
