--- a/explainer-video.html
+++ b/explainer-video.html
@@ -74,8 +74,8 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i
               class="tr-icon ion-android-menu"></i> </button>
           <div class="logo"> <a href="index.html"> <img class="logo logo-display"
-                src="/assets/images/skittles_logo.webp" alt=""> <img class="logo logo-scrolled"
-                src="/assets/images/skittles_logo.webp" alt=""> </a> </div>
+                src="/assets/images/skittles_logo.png" alt=""> <img class="logo logo-scrolled"
+                src="/assets/images/skittles_logo.png" alt=""> </a> </div>
         </div>
         <!--== End Header Navigation ==-->
 
@@ -88,12 +88,12 @@
 
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
               <ul class="dropdown-menu">
+                <li><a href="corporate-video-production.html">Corporate Video</a></li>
+                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
                 <li><a href="short-film.html">Campaign Videos</a></li>
+                <li><a href="explainer-video.html">Animated Video</a></li>
                 <li><a href="events-marketing-videos.html">Wedding / event film</a></li>
                 <li><a href="branding.html">Designing & Branding Services</a></li>
-                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
-                <li><a href="corporate-video-production.html">Corporate Video</a></li>
-                <li><a href="explainer-video.html">Animated Video</a></li>
               </ul>
             </li>
 
@@ -112,11 +112,11 @@
     <!--== Page Title Start ==-->
     <div class="transition-none">
       <section class="title-hero-bg parallax-effect"
-        style="background-image: url(assets/images/ExplainerVideoBanner.webp);">
+        style="background-image: url(assets/images/AnimatedBannerImage.webp);">
         <div class="overlay-gradient-bg-2"></div>
         <div class="container">
           <div class="page-title text-center white-color">
-            <h1 class="mt-0"><span class="play-font font-italic">Animated Explainer Video
+            <h1 class="mt-0"><span>Animated Explainer <br />Video
 
               </span> </h1>
           </div>
@@ -132,7 +132,7 @@
 
           <div class="col-sm-6 pt-70">
             <div class="pat-left">
-              <img src="./assets/images/Explainer-1.webp" alt="" class="img-responsive h-img">
+              <img src="./assets/images/Animated-1.webp" alt="" class="img-responsive h-img">
             </div>
           </div>
           <div class="col-sm-6 pt-40">
