--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i
               class="tr-icon ion-android-menu"></i> </button>
           <div class="logo"> <a href="index.html"> <img class="logo logo-display"
-                src="/assets/images/skittles_logo.webp" alt=""> <img class="logo logo-scrolled"
-                src="/assets/images/skittles_logo.webp" alt=""> </a> </div>
+                src="/assets/images/skittles_logo.png" alt=""> <img class="logo logo-scrolled"
+                src="/assets/images/skittles_logo.png" alt=""> </a> </div>
         </div>
         <!--== End Header Navigation ==-->
 
@@ -88,12 +88,12 @@
 
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
               <ul class="dropdown-menu">
+                <li><a href="corporate-video-production.html">Corporate Video</a></li>
+                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
                 <li><a href="short-film.html">Campaign Videos</a></li>
+                <li><a href="explainer-video.html">Animated Video</a></li>
                 <li><a href="events-marketing-videos.html">Wedding / event film</a></li>
                 <li><a href="branding.html">Designing & Branding Services</a></li>
-                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
-                <li><a href="corporate-video-production.html">Corporate Video</a></li>
-                <li><a href="explainer-video.html">Animated Video</a></li>
               </ul>
             </li>
 
@@ -121,7 +121,7 @@
         <div class="center-layout ">
           <div class="v-align-middle text-center">
 
-            <h1 class="font-700 white-color hero_sect_head">Skittles <br /> Productions</h1>
+            <h1 class="font-700 white-color hero_sect_head">Skittles Productions</h1>
             <p class=" white-color">Skittles Productions is a comprehensive video production company based in Delhi
               which offers corporate video & film production services to national and international brands, businesses
               and agencies.</p>
@@ -230,7 +230,7 @@
                         </div>
                       </div>
                     </a>
-                    <a href="">
+                    <a href="branding.html">
                       <div class="col-md-6 feature-box text-left mb-50 col-sm-12 animation-move-top">
                         <div class="pull-left">
                           <img src="./assets/images/WeddingEvents-2.png" alt="">
@@ -258,7 +258,7 @@
     <!--== Who We Are End ==-->
 
     <!--== Counter Start ==-->
-    <section class="dark-bg pt-80 pb-80">
+    <section class="dark-bg pt-80 pb-80" style="background-image: url(./assets/images/worldmap.webp); background-size: cover;">
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-sm-12">
@@ -711,7 +711,19 @@
         </div>
       </div>
     </section>
-
+    <section class="gradient-bg-6 pt-80 pb-80">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-sm-12 white-color relative">
+            <h2 class="sm-mb-30 font-40px display-inline-block mr-30 font-700 mt-0 xs-text-center sm-text-center">Ready to take your brand to the next level?</h2>
+            <div class="xs-display-block xs-text-center sm-display-block sm-text-center pull-right xs-centerize-col">
+              <a class="btn btn-xl btn-light btn-default pull-right mt-10 xs-centerize-col sm-centerize-col"
+                data-toggle="modal" data-target="#myModal">Get a quote</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--== Portfolio End ==-->
     <section class="pt-60 white-bg pb-0 transition-none ">
       <div class="container-fluid">
