--- a/short-film.html
+++ b/short-film.html
@@ -74,8 +74,8 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i
               class="tr-icon ion-android-menu"></i> </button>
           <div class="logo"> <a href="index.html"> <img class="logo logo-display"
-                src="/assets/images/skittles_logo.webp" alt=""> <img class="logo logo-scrolled"
-                src="/assets/images/skittles_logo.webp" alt="">
+                src="/assets/images/skittles_logo.png" alt=""> <img class="logo logo-scrolled"
+                src="/assets/images/skittles_logo.png" alt="">
             </a> </div>
         </div>
         <!--== End Header Navigation ==-->
@@ -89,12 +89,12 @@
 
             <li class="dropdown active"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
               <ul class="dropdown-menu">
+                <li><a href="corporate-video-production.html">Corporate Video</a></li>
+                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
                 <li><a href="short-film.html">Campaign Videos</a></li>
+                <li><a href="explainer-video.html">Animated Video</a></li>
                 <li><a href="events-marketing-videos.html">Wedding / event film</a></li>
                 <li><a href="branding.html">Designing & Branding Services</a></li>
-                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
-                <li><a href="corporate-video-production.html">Corporate Video</a></li>
-                <li><a href="explainer-video.html">Animated Video</a></li>
 
               </ul>
             </li>
@@ -357,9 +357,9 @@
         <h2 class="mt-0 text-center font-700 white-color">Advantages of Corporate Video For Your Business</h2>
         <hr class="center_line gradient-bg-6">
         <div class="row video_prd_img_box">
-          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center animation-move-top">
             <div class="counter-wrap">
-              <img src="/assets/images/DrivesAction.svg" alt="" />
+              <img src="/assets/images/GrabsAttention.svg" alt="" />
               <h5 class="font-700 white-color">Grabs Attention</h5>
             </div>
             <div>
@@ -369,9 +369,9 @@
                 notice.</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center animation-move-top">
             <div class="counter-wrap">
-              <img src="/assets/images/GrabsAttention.svg" alt="" />
+              <img src="/assets/images/ClearMessaging.svg" alt="" />
               <h5 class="font-700 white-color">Conveys Your Message Clearly</h5>
             </div>
             <div>
@@ -381,7 +381,7 @@
                 video gets the point across effectively.</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center animation-move-top">
             <div class="counter-wrap">
               <img src="/assets/images/BoostsEngagement.svg" alt="" />
               <h5 class="font-700 white-color">Boosts Engagement</h5>
@@ -394,7 +394,7 @@
           </div>
         </div>
         <div class="row flex-box-center">
-          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center animation-move-top">
             <div class="counter-wrap">
               <img src="/assets/images/SetsYouApart.svg" alt="" />
               <h5 class="font-700 white-color">Sets You Apart</h5>
@@ -405,10 +405,10 @@
                 being seen; it's about being remembered.</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center animation-move-top">
             <div class="counter-wrap">
               <img src="/assets/images/DrivesAction.svg" alt="" />
-              <h5 class="font-700 white-color">Conveys Your Message Clearly</h5>
+              <h5 class="font-700 white-color">Drives Action</h5>
             </div>
             <div>
               <p class="white-color">The ultimate goal? Prompting your audience to take action. Whether it's
