--- a/about.html
+++ b/about.html
@@ -74,8 +74,8 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i
               class="tr-icon ion-android-menu"></i> </button>
           <div class="logo"> <a href="index.html"> <img class="logo logo-display"
-                src="/assets/images/skittles_logo.webp" alt=""> <img class="logo logo-scrolled"
-                src="/assets/images/skittles_logo.webp" alt=""> </a> </div>
+                src="/assets/images/skittles_logo.png" alt=""> <img class="logo logo-scrolled"
+                src="/assets/images/skittles_logo.png" alt=""> </a> </div>
         </div>
         <!--== End Header Navigation ==-->
 
@@ -93,7 +93,7 @@
                 <li><a href="short-film.html">Campaign Videos</a></li>
                 <li><a href="explainer-video.html">Animated Video</a></li>
                 <li><a href="events-marketing-videos.html">Wedding / event film</a></li>
-
+                <li><a href="branding.html">Designing & Branding Services</a></li>
 
               </ul>
             </li>
@@ -124,7 +124,7 @@
     <!--== Page Title End ==-->
 
     <!--== Video Start ==-->
-    <section class="white-bg transition-none pb-0 whySkittles_Container">
+    <section class="white-bg transition-none pb-0 whySkittles_Container" >
       <div class="container">
         <div class="row img-cmn-parent">
           <div class="col-sm-6 col-md-6 xs-mb-30 pt-70 mt-70 img-cmn-container">
@@ -159,7 +159,7 @@
     <!--== Video End ==-->
 
     <!--== Counter Start ==-->
-    <section class="dark-bg pt-80 pb-80">
+    <section class="dark-bg pt-80 pb-80" style="background-image: url('./assets/images/worldmap.webp'); background-size: cover;">
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-sm-12">
