--- a/corporate-video-production.html
+++ b/corporate-video-production.html
@@ -74,8 +74,8 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i
               class="tr-icon ion-android-menu"></i> </button>
           <div class="logo"> <a href="index.html"> <img class="logo logo-display"
-                src="/assets/images/skittles_logo.webp" alt=""> <img class="logo logo-scrolled"
-                src="/assets/images/skittles_logo.webp" alt=""> </a> </div>
+                src="/assets/images/skittles_logo.png" alt=""> <img class="logo logo-scrolled"
+                src="/assets/images/skittles_logo.png" alt=""> </a> </div>
         </div>
         <!--== End Header Navigation ==-->
 
@@ -88,12 +88,12 @@
 
             <li class="dropdown active"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
               <ul class="dropdown-menu">
+                <li><a href="corporate-video-production.html">Corporate Video</a></li>
+                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
                 <li><a href="short-film.html">Campaign Videos</a></li>
+                <li><a href="explainer-video.html">Animated Video</a></li>
                 <li><a href="events-marketing-videos.html">Wedding / event film</a></li>
                 <li><a href="branding.html">Designing & Branding Services</a></li>
-                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
-                <li><a href="corporate-video-production.html">Corporate Video</a></li>
-                <li><a href="explainer-video.html">Animated Video</a></li>
               </ul>
             </li>
 
@@ -116,8 +116,8 @@
         <div class="overlay-gradient-bg-2"></div>
         <div class="container">
           <div class="page-title text-center white-color">
-            <h1 class="mt-0">A <span>Corporate Video
-              </span> &<br> Film Makers</h1>
+            <h1 class="mt-0">Corporate Video
+            </h1>
           </div>
         </div>
       </section>
