--- a/tv-commercial.html
+++ b/tv-commercial.html
@@ -74,8 +74,8 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i
               class="tr-icon ion-android-menu"></i> </button>
           <div class="logo"> <a href="index.html"> <img class="logo logo-display"
-                src="/assets/images/skittles_logo.webp" alt=""> <img class="logo logo-scrolled"
-                src="/assets/images/skittles_logo.webp" alt="">
+                src="/assets/images/skittles_logo.png" alt=""> <img class="logo logo-scrolled"
+                src="/assets/images/skittles_logo.png" alt="">
             </a> </div>
         </div>
         <!--== End Header Navigation ==-->
@@ -89,12 +89,12 @@
 
             <li class="dropdown active"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
               <ul class="dropdown-menu">
+                <li><a href="corporate-video-production.html">Corporate Video</a></li>
+                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
                 <li><a href="short-film.html">Campaign Videos</a></li>
+                <li><a href="explainer-video.html">Animated Video</a></li>
                 <li><a href="events-marketing-videos.html">Wedding / event film</a></li>
                 <li><a href="branding.html">Designing & Branding Services</a></li>
-                <li><a href="tv-commercial.html">TVC/ Ad film</a></li>
-                <li><a href="corporate-video-production.html">Corporate Video</a></li>
-                <li><a href="explainer-video.html">Animated Video</a></li>
               </ul>
             </li>
 
