--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
         <div class="overlay-gradient-bg"></div>
         <div class="container">
           <div class="page-title text-center white-color">
-            <h1 class="mt-0"><span class="play-font font-italic">Contact us</h1>
+            <h1 class="mt-0"><span>Contact us</h1>
 
 
           </div>
