--- a/clients.html
+++ b/clients.html
@@ -127,140 +127,140 @@
 			<div class="col-lg-12" data-aos="fade-left" data-aos-duration="1000">
 				<ul class="grid-box">
 					<li>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
 							<figure><img src="./assets/images/Aqualib.png"></figure>
 							<!-- <span class="techName">Node JS</span> -->
 						</div>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
 							<figure><img src="./assets/images/Azure-Power.png"></figure>
 							<!-- <span class="techName">Python</span> -->
 						</div>
 					</li>
 
 					<li>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
 							<figure><img src="./assets/images/Brandserve.png"></figure>
 							<!-- <span class="techName">Java J2EE</span> -->
 						</div>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
 							<figure><img src="./assets/images/Church.png"></figure>
 							<!-- <span class="techName">Microsoft .NET Framework</span> -->
 						</div>
 					</li>
 
 					<li>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
               <figure><img src="./assets/images/Creatilogic.png"></figure>
 							<!-- <span class="techName">PHP</span> -->
 						</div>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
 							<figure><img src="./assets/images/Denso.png"></figure>
 							<!-- <span class="techName">HTML, JS & CSS</span> -->
 						</div>
 					</li>
 
 					<li>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
               <figure><img src="./assets/images/Ebix.png"></figure>
 							<!-- <span class="techName">React</span> -->
 						</div>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
 							<figure><img src="./assets/images/Event-Labs.png"></figure>
 							<!-- <span class="techName">Angular JS</span> -->
 						</div>
 					</li>
 
 					<li>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
               <figure><img src="./assets/images/GPI.png"></figure>
 							<!-- <span class="techName">Nuxt JS</span> -->
 						</div>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
 							<figure><img src="./assets/images/Karacus.png"></figure>
 							<!-- <span class="techName">Bootstrap</span> -->
 						</div>
 					</li>
 
 					<li>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
               <figure><img src="./assets/images/LumiraStudios.png"></figure>
 							<!-- <span class="techName">Nuxt JS</span> -->
 						</div>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
 							<figure><img src="./assets/images/Maharishi-Ayurveda.png"></figure>
 							<!-- <span class="techName">Bootstrap</span> -->
 						</div>
 					</li>
 
 					<li>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
               <figure><img src="./assets/images/Masters-Unione.png"></figure>
 							<!-- <span class="techName">Nuxt JS</span> -->
 						</div>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
 							<figure><img src="./assets/images/Metso.png"></figure>
 							<!-- <span class="techName">Bootstrap</span> -->
 						</div>
 					</li>
 
 					<li>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
               <figure><img src="./assets/images/My11Circle.png"></figure>
 							<!-- <span class="techName">Nuxt JS</span> -->
 						</div>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
 							<figure><img src="./assets/images/Myriad.png"></figure>
 							<!-- <span class="techName">Bootstrap</span> -->
 						</div>
 					</li>
 
           <li>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
               <figure><img src="./assets/images/Peaur.png"></figure>
 							<!-- <span class="techName">Nuxt JS</span> -->
 						</div>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
 							<figure><img src="./assets/images/PI-Industries.png"></figure>
 							<!-- <span class="techName">Bootstrap</span> -->
 						</div>
 					</li>
 
 					<li>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
               <figure><img src="./assets/images/RummyCircle.png"></figure>
 							<!-- <span class="techName">Nuxt JS</span> -->
 						</div>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
 							<figure><img src="./assets/images/Shiksha2.png"></figure>
 							<!-- <span class="techName">Bootstrap</span> -->
 						</div>
 					</li>
           <li>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
               <figure><img src="./assets/images/StickPro.png"></figure>
 							<!-- <span class="techName">Nuxt JS</span> -->
 						</div>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
 							<figure><img src="./assets/images/TBC.png"></figure>
 							<!-- <span class="techName">Bootstrap</span> -->
 						</div>
 					</li>
           <li>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
               <figure><img src="./assets/images/TCIFoundation.png"></figure>
 							<!-- <span class="techName">Nuxt JS</span> -->
 						</div>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
 							<figure><img src="./assets/images/Techmatrix.png"></figure>
 							<!-- <span class="techName">Bootstrap</span> -->
 						</div>
 					</li>
           <li>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
               <figure><img src="./assets/images/Voyagevisuals.png"></figure>
 							<!-- <span class="techName">Nuxt JS</span> -->
 						</div>
-						<div class="logo_item">
+						<div class="logo_item animation-move-top">
 							<figure><img src="./assets/images/logo28.png"></figure>
 							<!-- <span class="techName">Bootstrap</span> -->
 						</div>
