ui changes done

--- a/about.html
+++ b/about.html
@@ -228,6 +228,10 @@
     <!--== Skills End ==-->
     <section class="gradient-bg-3">
       <div class="container">
+        <div class="dev_subtitle mb-60">
+          <h2 class="mt-0 text-center font-700 white-color">The Founding Team</h2>
+          <hr class="center_line white-bg">
+        </div>
         <div class="row">
           <div class="col-md-6 col-sm-6 col-xs-12 mb-25">
             <figure class="imghvr-blur text-center">
