--- a/corporate-video-production.html
+++ b/corporate-video-production.html
@@ -193,7 +193,7 @@
               for a corporate video for your business?</h2>
             <div class="xs-display-block xs-text-center sm-display-block sm-text-center pull-right xs-centerize-col">
               <a class="btn btn-xl btn-light btn-default pull-right mt-10 xs-centerize-col sm-centerize-col"
-                data-toggle="modal" data-target="#myModal">Get a quote</a>
+                data-toggle="modal" data-target="#myModal">Let’s talk</a>
             </div>
           </div>
         </div>
