--- a/events-marketing-videos.html
+++ b/events-marketing-videos.html
@@ -235,7 +235,7 @@
               to cherish memories for a lifetime?</h2>
             <div class="xs-display-block xs-text-center sm-display-block sm-text-center pull-right xs-centerize-col">
               <a class="btn btn-xl btn-light btn-default pull-right mt-10 xs-centerize-col sm-centerize-col"
-                data-toggle="modal" data-target="#myModal">Get a quote</a>
+                data-toggle="modal" data-target="#myModal">Let's talk</a>
             </div>
           </div>
         </div>
