--- a/short-film.html
+++ b/short-film.html
@@ -316,7 +316,7 @@
               to start a project today!</h2>
             <div class="xs-display-block xs-text-center sm-display-block sm-text-center pull-right xs-centerize-col">
               <a class="btn btn-xl btn-light btn-default pull-right mt-10 xs-centerize-col sm-centerize-col"
-                data-toggle="modal" data-target="#myModal">Get a quote</a>
+                data-toggle="modal" data-target="#myModal">Contact us now</a>
             </div>
           </div>
         </div>
