--- a/tv-commercial.html
+++ b/tv-commercial.html
@@ -192,7 +192,7 @@
             <h2 class="sm-mb-30 font-40px display-inline-block mr-30 font-700 mt-0 xs-text-center sm-text-center">Transform your ideas into stunning videos!</h2>
             <div class="xs-display-block xs-text-center sm-display-block sm-text-center pull-right xs-centerize-col">
               <a class="btn btn-xl btn-light btn-default pull-right mt-10 xs-centerize-col sm-centerize-col"
-                data-toggle="modal" data-target="#myModal">Get a quote</a>
+                data-toggle="modal" data-target="#myModal">Contact us now</a>
             </div>
           </div>
         </div>
