--- a/index.html
+++ b/index.html
@@ -1069,11 +1069,12 @@
               <div class="widget widget-links">
                 <h5 class="widget-title">Other Services</h5>
                 <ul>
-                  <li><a href="corporate-video-production.html">Corporate Video</a></li>
-                  <li><a href="tv-commercial.html">TV Commercial</a></li>
-                  <li><a href="explainer-video.html">Animated Explainer Video</a></li>
-                  <li><a href="short-film.html">Short Film</a></li>
-                  <li><a href="events-marketing-videos.html">Events Marketing Videos</a></li>
+                  <li><a href="corporate-video-production.html">Corporate videos</a></li>
+                  <li><a href="tv-commercial.html">TVC/ Ad films</a></li>
+                  <li><a href="short-film.html">Campaign videos</a></li>
+                  <li><a href="explainer-video.html">Animated  explainer videos</a></li>
+                  <li><a href="events-marketing-videos.html">Wedding & event film</a></li>
+                  <li><a href="branding.html">Designing & Branding services</a></li>
                 </ul>
               </div>
             </div>
