--- a/about.html
+++ b/about.html
@@ -73,9 +73,8 @@
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i
               class="tr-icon ion-android-menu"></i> </button>
-          <div class="logo"> <a href="index.html"> <img class="logo logo-display"
-                src="/assets/images/skittles_logo.png" alt=""> <img class="logo logo-scrolled"
-                src="/assets/images/skittles_logo.png" alt=""> </a> </div>
+          <div class="logo"> <a href="index.html"> <img class="logo logo-display" src="/assets/images/skittles_logo.png"
+                alt=""> <img class="logo logo-scrolled" src="/assets/images/skittles_logo.png" alt=""> </a> </div>
         </div>
         <!--== End Header Navigation ==-->
 
@@ -111,7 +110,7 @@
     <!--== Header End ==-->
     <!--== Page Title Start ==-->
     <div class="transition-none">
-      <section class="title-hero-bg parallax-effect" style="background-image: url(assets/images/About-banner.jpg);">
+      <section class="title-hero-bg parallax-effect" style="background-image: url(assets/images/About-Banner.webp);">
         <div class="overlay-gradient-bg-2"></div>
         <div class="container">
           <div class="page-title text-center white-color">
@@ -124,7 +123,7 @@
     <!--== Page Title End ==-->
 
     <!--== Video Start ==-->
-    <section class="white-bg transition-none pb-0 whySkittles_Container" >
+    <section class="white-bg transition-none pb-0 whySkittles_Container">
       <div class="container">
         <div class="row img-cmn-parent">
           <div class="col-sm-6 col-md-6 xs-mb-30 pt-70 mt-70 img-cmn-container">
@@ -159,7 +158,8 @@
     <!--== Video End ==-->
 
     <!--== Counter Start ==-->
-    <section class="dark-bg pt-80 pb-80" style="background-image: url('./assets/images/worldmap.webp'); background-size: cover;">
+    <section class="dark-bg pt-80 pb-80"
+      style="background-image: url('./assets/images/worldmap.webp'); background-size: cover;">
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-sm-12">
@@ -394,11 +394,12 @@
               <div class="widget widget-links">
                 <h5 class="widget-title">Other Services</h5>
                 <ul>
-                  <li><a href="corporate-video-production.html">Corporate Video</a></li>
-                  <li><a href="tv-commercial.html">TV Commercial</a></li>
-                  <li><a href="explainer-video.html">Animated Explainer Video</a></li>
-                  <li><a href="short-film.html">Short Film</a></li>
-                  <li><a href="events-marketing-videos.html">Events Marketing Videos</a></li>
+                  <li><a href="corporate-video-production.html">Corporate videos</a></li>
+                  <li><a href="tv-commercial.html">TVC/ Ad films</a></li>
+                  <li><a href="short-film.html">Campaign videos</a></li>
+                  <li><a href="explainer-video.html">Animated explainer videos</a></li>
+                  <li><a href="events-marketing-videos.html">Wedding & event film</a></li>
+                  <li><a href="branding.html">Designing & Branding services</a></li>
                 </ul>
               </div>
             </div>
