--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                 class="icofont icofont-social-linkedin"></a></li>
             <li><a href="https://www.youtube.com/channel/UCpeQNGJNsfk_5tkNsTptmYQ/featured"
                 class="icofont icofont-social-youtube"></a></li>
-            <li><a href="https://vimeo.com/skittlesproductions" class="icofont icofont-social-vimeo"></a></li>
+ <!-- <li><a href="https://vimeo.com/skittlesproductions" class="icofont icofont-social-vimeo"></a></li> -->
 
           </ul>
         </div>
@@ -430,7 +430,7 @@
                     class="icofont icofont-social-linkedin"></a></li>
                 <li><a href="https://www.youtube.com/channel/UCpeQNGJNsfk_5tkNsTptmYQ/featured"
                     class="icofont icofont-social-youtube"></a></li>
-                <li><a href="https://vimeo.com/skittlesproductions" class="icofont icofont-social-vimeo"></a></li>
+     <!-- <li><a href="https://vimeo.com/skittlesproductions" class="icofont icofont-social-vimeo"></a></li> -->
               </ul>
             </div>
           </div>
