--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                 class="icofont icofont-social-linkedin"></a></li>
             <li><a href="https://www.youtube.com/channel/UCpeQNGJNsfk_5tkNsTptmYQ/featured"
                 class="icofont icofont-social-youtube"></a></li>
-            <li><a href="https://vimeo.com/skittlesproductions" class="icofont icofont-social-vimeo"></a></li>
+ <!-- <li><a href="https://vimeo.com/skittlesproductions" class="icofont icofont-social-vimeo"></a></li> -->
           </ul>
         </div>
         <!--== End Atribute Navigation ==-->
@@ -203,7 +203,7 @@
               <li><a class="facebook" href="#."><i class="icofont icofont-social-facebook"></i></a></li>
               <li><a class="linkedin" href="#."><i class="icofont icofont-social-linkedin"></i></a></li>
               <li><a class="youtube" href="#."><i class="icofont icofont-social-youtube"></i></a></li>
-              <li><a href="https://vimeo.com/skittlesproductions" class="icofont icofont-social-vimeo"></a></li>
+   <!-- <li><a href="https://vimeo.com/skittlesproductions" class="icofont icofont-social-vimeo"></a></li> -->
             </ul>
           </div>
         </div>
@@ -329,7 +329,7 @@
                     class="icofont icofont-social-linkedin"></a></li>
                 <li><a href="https://www.youtube.com/channel/UCpeQNGJNsfk_5tkNsTptmYQ/featured"
                     class="icofont icofont-social-youtube"></a></li>
-                <li><a href="https://vimeo.com/skittlesproductions" class="icofont icofont-social-vimeo"></a></li>
+     <!-- <li><a href="https://vimeo.com/skittlesproductions" class="icofont icofont-social-vimeo"></a></li> -->
               </ul>
             </div>
           </div>
