--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" type="text/css" href="revolution/css/settings.css">
   <link rel="stylesheet" type="text/css" href="revolution/css/layers.css">
   <link rel="stylesheet" type="text/css" href="revolution/css/navigation.css">
-
+  <link rel="stylesheet" href="myProjects/webProject/icofont/css/icofont.min.css">
 </head>
 
 <body>
@@ -57,13 +57,17 @@
             <li><a href="https://www.facebook.com/Skittles-Productions-228382107723533/"
                 class="icofont icofont-social-facebook"></a></li>
             <!-- <li><a href="https://twitter.com/skittles_prod" class="icofont icofont-social-twitter"></a></li> -->
-            <li><a href="https://www.instagram.com/skittlesproductions/?hl=en"
-                class="icofont icofont-social-instagram"></a></li>
+            <li>
+              
+              <a href="https://www.instagram.com/skittlesproductions/?hl=en"
+                class="icofont icofont-social-instagram"></a>
+              </li>
             <li><a href="https://www.linkedin.com/company/skittles-productions/"
                 class="icofont icofont-social-linkedin"></a></li>
             <li><a href="https://www.youtube.com/channel/UCpeQNGJNsfk_5tkNsTptmYQ/featured"
                 class="icofont icofont-social-youtube"></a></li>
-            <li><a href="https://vimeo.com/skittlesproductions" class="icofont icofont-social-vimeo"></a></li>
+            <!-- <li><a href="https://vimeo.com/skittlesproductions" class="icofont icofont-social-vimeo"></a></li> -->
+
 
           </ul>
         </div>
@@ -73,9 +77,8 @@
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i
               class="tr-icon ion-android-menu"></i> </button>
-          <div class="logo"> <a href="index.html"> <img class="logo logo-display"
-                src="/assets/images/skittles_logo.png" alt=""> <img class="logo logo-scrolled"
-                src="/assets/images/skittles_logo.png" alt=""> </a> </div>
+          <div class="logo"> <a href="index.html"> <img class="logo logo-display" src="/assets/images/skittles_logo.png"
+                alt=""> <img class="logo logo-scrolled" src="/assets/images/skittles_logo.png" alt=""> </a> </div>
         </div>
         <!--== End Header Navigation ==-->
 
@@ -169,7 +172,8 @@
                         </div>
                         <div class="pull-right">
                           <h4 class="mt-0 font-600">Corporate Video</h4>
-                          <p class="font-400">Compellingly tell your corporate story with our professional and engaging corporate videos.</p>
+                          <p class="font-400">Compellingly tell your corporate story with our professional and engaging
+                            corporate videos.</p>
                         </div>
                       </div>
                     </a>
@@ -182,7 +186,8 @@
                         </div>
                         <div class="pull-right">
                           <h4 class="mt-0 font-600">TVC / Ad film</h4>
-                          <p class="font-400">Make a lasting impression with our TVC and ad films that turn heads and spark interest.</p>
+                          <p class="font-400">Make a lasting impression with our TVC and ad films that turn heads and
+                            spark interest.</p>
                         </div>
                       </div>
                     </a>
@@ -193,7 +198,8 @@
                         </div>
                         <div class="pull-right">
                           <h4 class="mt-0 font-600">Campaign Videos</h4>
-                          <p class="font-400">Bring your brand to life with our vibrant campaign videos that speak louder than words.</p>
+                          <p class="font-400">Bring your brand to life with our vibrant campaign videos that speak
+                            louder than words.</p>
                         </div>
                       </div>
                     </a>
@@ -205,7 +211,8 @@
                         <div class="pull-right">
 
                           <h4 class="mt-0 font-600">Animated Video</h4>
-                          <p class="font-400">Add a touch of creativity to your message with our animated videos that bring ideas to life.</p>
+                          <p class="font-400">Add a touch of creativity to your message with our animated videos that
+                            bring ideas to life.</p>
                         </div>
                       </div>
                     </a>
@@ -218,7 +225,8 @@
                         </div>
                         <div class="pull-right">
                           <h4 class="mt-0 font-600">Wedding / event film</h4>
-                          <p class="font-400">Capture the magic of your special day with our heartwarming wedding and event films.</p>
+                          <p class="font-400">Capture the magic of your special day with our heartwarming wedding and
+                            event films.</p>
                         </div>
                       </div>
                     </a>
@@ -229,7 +237,8 @@
                         </div>
                         <div class="pull-right">
                           <h4 class="mt-0 font-600">Designing & Branding</h4>
-                          <p class="font-400">Elevate your brand's identity with our personalised designing and branding services.</p>
+                          <p class="font-400">Elevate your brand's identity with our personalised designing and branding
+                            services.</p>
                         </div>
                       </div>
                     </a>
@@ -248,7 +257,8 @@
     <!--== Who We Are End ==-->
 
     <!--== Counter Start ==-->
-    <section class="dark-bg pt-80 pb-80" style="background-image: url(./assets/images/worldmap.webp); background-size: cover;">
+    <section class="dark-bg pt-80 pb-80"
+      style="background-image: url(./assets/images/worldmap.webp); background-size: cover;">
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-sm-12">
@@ -284,7 +294,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-sm-12 white-color relative">
-            <h2 class="sm-mb-30 font-40px display-inline-block mr-30 font-700 mt-0 xs-text-center sm-text-center"> Transform your ideas into stunning videos!</h2>
+            <h2 class="sm-mb-30 font-40px display-inline-block mr-30 font-700 mt-0 xs-text-center sm-text-center">
+              Transform your ideas into stunning videos!</h2>
             <div class="xs-display-block xs-text-center sm-display-block sm-text-center pull-right xs-centerize-col">
               <a class="btn btn-xl btn-light btn-default pull-right mt-10 xs-centerize-col sm-centerize-col"
                 data-toggle="modal" data-target="#myModal">Contact us now</a>
@@ -326,27 +337,39 @@
               <div class="v-align-baseline">
                 <div class="pb-130 pr-50 pl-50">
                   <ul class="remove-padding list-style-02 mt-30">
-                    <li><h5 style="display: inline-block;">Innovative Storytelling:</h5>&nbsp;We don't just capture moments; we craft narratives.
+                    <li>
+                      <h5 style="display: inline-block;">Innovative Storytelling:</h5>&nbsp;We don't just capture
+                      moments; we craft narratives.
                       Your
                       story is unique, and we bring it to life through innovative storytelling that captivates and
-                      engages.</li>
-                    <li><h5 style="display: inline-block;">
+                      engages.
+                    </li>
+                    <li>
+                      <h5 style="display: inline-block;">
                         End-to-End Expertise:
                       </h5>&nbsp;As a fully integrated video production house, we handle every aspect seamlessly –
                       from
                       pre-production planning to the magic of production and the meticulous post-production details.
                     </li>
-                    <li><h5 style="display: inline-block;">Budget-Friendly Excellence:</h5>&nbsp;Excellence: Quality doesn't have to break the
+                    <li>
+                      <h5 style="display: inline-block;">Budget-Friendly Excellence:</h5>&nbsp;Excellence: Quality
+                      doesn't have to break the
                       bank. We
                       offer affordable excellence, ensuring your creative vision doesn't compromise quality or budget.
                     </li>
-                    <li><h5 style="display: inline-block;">Collaborative Approach:</h5>&nbsp;Your ideas matter. We believe in collaboration,
+                    <li>
+                      <h5 style="display: inline-block;">Collaborative Approach:</h5>&nbsp;Your ideas matter. We believe
+                      in collaboration,
                       working
-                      closely with you to understand your goals and infuse your personality into every frame.</li>
-                    <li><h5 style="display: inline-block;">Timely Delivery:</h5>&nbsp;We know time is of the essence. Our efficient workflow
+                      closely with you to understand your goals and infuse your personality into every frame.
+                    </li>
+                    <li>
+                      <h5 style="display: inline-block;">Timely Delivery:</h5>&nbsp;We know time is of the essence. Our
+                      efficient workflow
                       ensures
                       timely delivery without sacrificing the creative process, so your vision becomes a reality when
-                      needed.</li>
+                      needed.
+                    </li>
                   </ul>
                   <p class="mt-30">In video production, we're not just a company; we're the storytellers who make your
                     narrative unforgettable. Let's embark on a creative journey together, turning your ideas into videos
@@ -705,7 +728,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-sm-12 white-color relative">
-            <h2 class="sm-mb-30 font-40px display-inline-block mr-30 font-700 mt-0 xs-text-center sm-text-center">Ready to take your brand to the next level?</h2>
+            <h2 class="sm-mb-30 font-40px display-inline-block mr-30 font-700 mt-0 xs-text-center sm-text-center">Ready
+              to take your brand to the next level?</h2>
             <div class="xs-display-block xs-text-center sm-display-block sm-text-center pull-right xs-centerize-col">
               <a class="btn btn-xl btn-light btn-default pull-right mt-10 xs-centerize-col sm-centerize-col"
                 data-toggle="modal" data-target="#myModal">Let's Talk</a>
@@ -908,7 +932,7 @@
     <!--== Clients Start ==-->
     <section class="pb-60 pt-60 ">
       <div class="container">
-        <h2 class="mt-0 text-center font-700">Customised video-making services <br/> for your brand</h2>
+        <h2 class="mt-0 text-center font-700">Customised video-making services <br /> for your brand</h2>
         <hr class="center_line gradient-bg-6">
         <div class="row">
 
@@ -1072,7 +1096,7 @@
                   <li><a href="corporate-video-production.html">Corporate videos</a></li>
                   <li><a href="tv-commercial.html">TVC/ Ad films</a></li>
                   <li><a href="short-film.html">Campaign videos</a></li>
-                  <li><a href="explainer-video.html">Animated  explainer videos</a></li>
+                  <li><a href="explainer-video.html">Animated explainer videos</a></li>
                   <li><a href="events-marketing-videos.html">Wedding & event film</a></li>
                   <li><a href="branding.html">Designing & Branding services</a></li>
                 </ul>
@@ -1105,7 +1129,7 @@
                     class="icofont icofont-social-linkedin"></a></li>
                 <li><a href="https://www.youtube.com/channel/UCpeQNGJNsfk_5tkNsTptmYQ/featured"
                     class="icofont icofont-social-youtube"></a></li>
-                <li><a href="https://vimeo.com/skittlesproductions" class="icofont icofont-social-vimeo"></a></li>
+                <!-- <li><a href="https://vimeo.com/skittlesproductions" class="icofont icofont-social-vimeo"></a></li> -->
               </ul>
             </div>
           </div>
